Integration Laravel - Error 1

--- a/public/frontend/styles/main.scss
+++ b/public/frontend/styles/main.scss
@@ -144,11 +144,14 @@ header {
         .travel-country {
             font-size: 18px;
             color: #fff;
+
         }
 
         .travel-location {
             font-size: 26px;
             color: #fff;
+            font-family: 'Playfair Display', serif;
+
         }
 
         .travel-button {
